# scylla-rust-mcp

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRATES_IO_CHECKLIST.md  Cargo.toml  Dockerfile  Justfile  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md
.codex/context/: repo-map.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
demo/: docker-compose.yml  encom_demo.cql
scripts/: release-local.sh
src/: lib.rs  main.rs
tests/: args_extraction.rs  capabilities.rs  conversion.rs  integration_describe_table.rs  integration_functions_aggregates.rs  integration_indexes_replication.rs  integration_list_keyspaces.rs  integration_sample_select.rs  integration_size_estimates.rs  integration_views_udts.rs  mcp_tools.rs  stdio_compat.rs  workflow_security.rs
