[package]
name = "scylla-rust-mcp"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["mcp"]
# Enable the MCP stdio server and related deps
mcp = [
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:serde",
    "dep:serde_json",
    "dep:anyhow",
    "dep:rust-mcp-sdk",
    "dep:rust-mcp-schema",
    "dep:scylla",
    "dep:futures",
    "dep:async-trait",
    "dep:base64",
    "dep:openssl",
    "dep:scylla-cql",
]

[dependencies]
# Optional dependencies for MCP server and future Scylla integration
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
anyhow = { version = "1", optional = true }
"rust-mcp-sdk" = { version = "0.1", optional = true }
"rust-mcp-schema" = { version = "0.3", optional = true }
scylla = { version = "0.14", features = ["ssl"], optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
base64 = { version = "0.22", optional = true }
openssl = { version = "0.10", optional = true }
scylla-cql = { version = "0.3", optional = true }
# Official MCP Rust SDK (crate name `rmcp`)
# rmcp crate integration is pending due to upstream compile issues on crates.io.
# rmcp = { version = "0.5", optional = true, default-features = false, features = ["transport-io", "server", "macros"] }

# Scylla driver planned for Phase 1 read-only operations (kept disabled until needed)
# scylla = { version = "0.14", optional = true }
